ingress/ingress-rules-goquorum.yml
---
# ingress-nginx IngressClass
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: goquorum-ingress-class
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goquorum-ingress-routes
  namespace: quorum
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/whitelist-source-range: w.x.y.z/32,a.b.c.d/32

spec:
  ingressClassName: goquorum-ingress-class
  tls:
    - hosts:
        - testnet.fpt-blockchain-lab.com
      secretName: letsencrypt-prod-tls
  rules:
  - host: testnet.fpt-blockchain-lab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blockscout
            port:
              number: 4000
      - path: /rpc
        pathType: Prefix
        backend:
          service:
            name: goquorum-node-rpc-1
            port:
              number: 8545
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: goquorum-node-rpc-1
            port:
              number: 8546
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: goquorum-node-rpc-1
            port:
              number: 8547
