ingress/ingress-rules-monitoring.yml
---
# ingress-nginx IngressClass
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: monitoring-ingress-class
  namespace: quorum
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress-routes
  namespace: quorum
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/whitelist-source-range: w.x.y.z/32,a.b.c.d/32

spec:
  ingressClassName: monitoring-ingress-class
  tls:
    - hosts:
        - monitoring-testnet.fpt-blockchain-lab.com
      secretName: letsencrypt-prod-tls
  rules:
  - host: monitoring-testnet.fpt-blockchain-lab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 3000
