ingress/ingress-rules-quorum.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quorum-ingress-routes
  namespace: quorum
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/kibana/(.*) /$1 break;
      rewrite (?i)/kibana$ / break;
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/whitelist-source-range: w.x.y.z/32,a.b.c.d/32

spec:
  rules:
  - http:
      paths:
      - path: /rpc
        pathType: Prefix
        backend:
          service:
            name: goquorum-node-validator-1
            port:
              number: 8545
      - path: /monitor
        pathType: Prefix
        backend:
          service:
            name: quorum-monitoring-monitoring-grafana
            port:
              number: 3000
      - path: /explorer
        pathType: Prefix
        backend:
          service:
            name: blockscout
            port:
              number: 4000
      # - path: /kibana
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: kibana-kibana
      #       port:
      #         number: 5601
